--- a/dochub.yaml
+++ b/dochub.yaml
@@ -8,3 +8,9 @@ imports:
   # The default metamodel CEAF is included here. You can completely replace it with your own.
   # Здесь подключается метамодель CEAF по умолчанию. Вы можете полностью заменить ее своей.
   - https://alpha.dochub.info/archcode/_metamodel_/ceaf-app/dochub.yaml
+docs:
+  doc1744545644408:
+    type: excalidraw
+    source: diagramma.excalidraw
+    location: /Документы/Диаграмма
+    title: Диаграмма
